--- a/Files/styles.css
+++ b/Files/styles.css
@@ -14,3 +14,39 @@ nav{
     text-align: center;
     font-size: 20px;
 }
+
+h1 {
+    color: #5280b8;
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+}
+
+nav {
+    text-align: center;
+    margin: 20px 0;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+iframe {
+    border-radius: 12px;
+    width: 90%;
+    max-width: 600px;
+    height: 352px;
+    border: 0;
+    display: block;
+    margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+    iframe {
+        width: 50%;
+    }
+}
